--- a/app/src/main/res/xml/pref_config_other.xml
+++ b/app/src/main/res/xml/pref_config_other.xml
@@ -19,7 +19,7 @@
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="true"
         android:key="showRss"
-        android:title="显示订阅"
+        android:title="@string/show_rss"
         app:iconSpaceReserved="false" />
 
     <Preference
