--- a/app/src/main/res/layout/activity_arrange_book.xml
+++ b/app/src/main/res/layout/activity_arrange_book.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,52 +18,42 @@
         android:layout_weight="1" />
 
     <!--文件点击按钮-->
-    <RelativeLayout
-        android:id="@+id/rl_bottom"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/background"
         android:gravity="center_vertical"
-        android:padding="10dp"
-        android:elevation="2dp"
-        tools:ignore="RtlHardcoded,RtlSymmetry">
+        android:padding="6dp"
+        android:elevation="2dp">
 
         <io.legado.app.lib.theme.view.ATECheckBox
             android:id="@+id/cb_selected_all"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:text="@string/select_all"
-            android:textColor="@color/tv_text_default" />
-
-        <TextView
-            android:id="@+id/tv_select_count"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/select_count"
-            android:layout_toRightOf="@+id/cb_selected_all"
-            tools:ignore="RelativeOverlap" />
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="@string/select_all_count"
+            android:textColor="@color/tv_text_default" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
             android:id="@+id/btn_to_group"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
             android:gravity="center"
-            android:minWidth="110dp"
+            android:minWidth="100dp"
             android:text="@string/move_to_group" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
             android:id="@+id/btn_delete"
             android:layout_width="70dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:minWidth="100dp"
             android:gravity="center"
-            android:layout_toLeftOf="@id/btn_to_group"
             android:text="@string/delete" />
-    </RelativeLayout>
+
+    </LinearLayout>
 </LinearLayout>
