--- a/app/src/main/res/layout/activity_import_book.xml
+++ b/app/src/main/res/layout/activity_import_book.xml
@@ -69,44 +69,43 @@
     </FrameLayout>
 
     <!--文件点击按钮-->
-    <RelativeLayout
-        android:id="@+id/rl_bottom"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/background"
         android:gravity="center_vertical"
-        android:padding="10dp"
-        android:elevation="2dp"
-        tools:ignore="RtlHardcoded,RtlSymmetry">
+        android:padding="6dp"
+        android:elevation="2dp">
 
         <io.legado.app.lib.theme.view.ATECheckBox
             android:id="@+id/cb_selected_all"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:text="@string/select_all"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="@string/select_all_count"
             android:textColor="@color/tv_text_default" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
             android:id="@+id/btn_add_book"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
             android:gravity="center"
-            android:minWidth="110dp"
+            android:minWidth="100dp"
             android:text="@string/add_to_shelf" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
             android:id="@+id/btn_delete"
             android:layout_width="70dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:minWidth="100dp"
             android:gravity="center"
-            android:layout_toLeftOf="@id/btn_add_book"
             android:text="@string/delete" />
-    </RelativeLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
