--- a/app/src/main/res/layout/activity_book_source.xml
+++ b/app/src/main/res/layout/activity_book_source.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <io.legado.app.ui.widget.TitleBar
@@ -32,7 +33,10 @@
         android:layout_height="wrap_content"
         android:background="@color/background"
         android:gravity="center_vertical"
-        android:padding="6dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:elevation="2dp">
 
         <io.legado.app.lib.theme.view.ATECheckBox
@@ -51,7 +55,7 @@
             android:layout_margin="5dp"
             android:padding="5dp"
             android:gravity="center"
-            android:minWidth="90dp"
+            android:minWidth="80dp"
             android:text="@string/revert_selection" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
@@ -60,9 +64,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:minWidth="90dp"
+            android:minWidth="80dp"
             android:gravity="center"
             android:text="@string/delete" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_menu_more"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="6dp"
+            android:src="@drawable/ic_more_vert"
+            android:tint="@color/tv_text_default"
+            tools:ignore="RtlHardcoded" />
 
     </LinearLayout>
 
