--- a/app/src/main/res/layout/activity_import_book.xml
+++ b/app/src/main/res/layout/activity_import_book.xml
@@ -74,7 +74,10 @@
         android:layout_height="wrap_content"
         android:background="@color/background"
         android:gravity="center_vertical"
-        android:padding="6dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:elevation="2dp">
 
         <io.legado.app.lib.theme.view.ATECheckBox
@@ -93,7 +96,7 @@
             android:layout_margin="5dp"
             android:padding="5dp"
             android:gravity="center"
-            android:minWidth="90dp"
+            android:minWidth="80dp"
             android:text="@string/add_to_shelf" />
 
         <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
@@ -102,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:minWidth="90dp"
+            android:minWidth="80dp"
             android:gravity="center"
             android:text="@string/delete" />
 
