--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -98,6 +98,12 @@
         <item>-1</item>
     </string-array>
 
+    <string-array name="select_folder">
+        <item>@string/default_path</item>
+        <item>@string/sys_folder_picker</item>
+        <item>@string/app_folder_picker</item>
+    </string-array>
+
     <string-array name="screen_direction_list_title">
         <item>@string/screen_unspecified</item>
         <item>@string/screen_portrait</item>
