--- a/app/src/main/res/drawable/item_bg_dark.xml
+++ b/app/src/main/res/drawable/item_bg_dark.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <color xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/item_bg_color" />
+    android:color="@color/md_grey_800" />
