--- a/app/src/main/res/layout/dialog_font_select.xml
+++ b/app/src/main/res/layout/dialog_font_select.xml
@@ -7,6 +7,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
+        android:background="@color/background_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
