--- a/app/src/main/res/layout/activity_arrange_book.xml
+++ b/app/src/main/res/layout/activity_arrange_book.xml
@@ -17,46 +17,9 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <!--文件点击按钮-->
-    <LinearLayout
+    <io.legado.app.ui.widget.SelectActionBar
+        android:id="@+id/select_action_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_menu"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        android:elevation="2dp">
+        android:layout_height="wrap_content" />
 
-        <io.legado.app.lib.theme.view.ATECheckBox
-            android:id="@+id/cb_selected_all"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:text="@string/select_all_count"
-            android:textColor="@color/tv_text_default" />
-
-        <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
-            android:id="@+id/btn_to_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:gravity="center"
-            android:minWidth="80dp"
-            android:text="@string/move_to_group" />
-
-        <io.legado.app.lib.theme.view.ATEAccentStrokeTextView
-            android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:minWidth="80dp"
-            android:gravity="center"
-            android:text="@string/delete" />
-
-    </LinearLayout>
 </LinearLayout>
