--- a/app/src/main/res/layout/item_arrange_book.xml
+++ b/app/src/main/res/layout/item_arrange_book.xml
@@ -44,6 +44,7 @@
         android:id="@+id/tv_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="10dp"
         android:text="@string/group"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,6 +55,7 @@
         android:id="@+id/tv_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="10dp"
         android:text="@string/delete"
         app:layout_constraintTop_toTopOf="parent"
