添加内容简繁转换功能(开关在其他设置中)

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -142,4 +142,15 @@
         <item>@string/icon_book</item>
     </string-array>
 
+    <string-array name="chinese_mode">
+        <item>关闭</item>
+        <item>简体转繁体</item>
+        <item>繁体转简体</item>
+    </string-array>
+
+    <string-array name="chinese_mode_v">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
