--- a/app/src/main/res/layout/view_detail_seek_bar.xml
+++ b/app/src/main/res/layout/view_detail_seek_bar.xml
@@ -10,8 +10,9 @@
 
     <TextView
         android:id="@+id/tv_seek_title"
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:text="@string/text_letter_spacing" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -43,6 +44,7 @@
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:singleLine="true"
         tools:ignore="RtlHardcoded" />
 
 </LinearLayout>
