--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -222,19 +222,11 @@
         android:layout_height="48dp"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
+        app:text="@string/text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/bg1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_bg_ts" />
-
-    <TextView
-        android:id="@+id/tv_bg0"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="@string/text"
-        app:layout_constraintTop_toTopOf="@+id/bg0"
-        app:layout_constraintLeft_toLeftOf="@+id/bg0" />
 
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg1"
@@ -242,19 +234,11 @@
         android:layout_height="48dp"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
+        app:text="@string/text"
         app:layout_constraintLeft_toRightOf="@+id/bg0"
         app:layout_constraintRight_toLeftOf="@+id/bg2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bg0" />
-
-    <TextView
-        android:id="@+id/tv_bg1"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="@string/text"
-        app:layout_constraintTop_toTopOf="@+id/bg1"
-        app:layout_constraintLeft_toLeftOf="@+id/bg1" />
 
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg2"
@@ -262,19 +246,11 @@
         android:layout_height="48dp"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
+        app:text="@string/text"
         app:layout_constraintLeft_toRightOf="@+id/bg1"
         app:layout_constraintRight_toLeftOf="@+id/bg3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bg0" />
-
-    <TextView
-        android:id="@+id/tv_bg2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="@string/text"
-        app:layout_constraintTop_toTopOf="@+id/bg2"
-        app:layout_constraintLeft_toLeftOf="@+id/bg2" />
 
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg3"
@@ -282,19 +258,11 @@
         android:layout_height="48dp"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
+        app:text="@string/text"
         app:layout_constraintLeft_toRightOf="@+id/bg2"
         app:layout_constraintRight_toLeftOf="@+id/bg4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bg0" />
-
-    <TextView
-        android:id="@+id/tv_bg3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="@string/text"
-        app:layout_constraintTop_toTopOf="@+id/bg3"
-        app:layout_constraintLeft_toLeftOf="@+id/bg3" />
 
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg4"
@@ -302,18 +270,10 @@
         android:layout_height="48dp"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
+        app:text="@string/text"
         app:layout_constraintLeft_toRightOf="@+id/bg3"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bg0" />
-
-    <TextView
-        android:id="@+id/tv_bg4"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="@string/text"
-        app:layout_constraintTop_toTopOf="@+id/bg4"
-        app:layout_constraintLeft_toLeftOf="@+id/bg4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
