--- a/app/src/main/res/layout/view_select_action_bar.xml
+++ b/app/src/main/res/layout/view_select_action_bar.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
+    android:gravity="center_vertical"
     android:elevation="2dp">
 
     <io.legado.app.lib.theme.view.ATECheckBox
@@ -47,4 +52,4 @@
         android:visibility="gone"
         tools:ignore="RtlHardcoded" />
 
-</merge>
+</LinearLayout>
