--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -139,7 +139,7 @@
 
     <string-array name="icons">
         <item>@string/icon_main</item>
-        <item>@string/icon_book</item>
+        <item>@string/icon_1</item>
     </string-array>
 
     <string-array name="chinese_mode">
