--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -138,8 +138,8 @@
     </string-array>
 
     <string-array name="icons">
-        <item>@string/icon_main</item>
-        <item>@string/icon_1</item>
+        <item>ic_launcher</item>
+        <item>ic_launcher_1</item>
     </string-array>
 
     <string-array name="chinese_mode">
