--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -139,7 +139,7 @@
 
     <string-array name="icons">
         <item>ic_launcher</item>
-        <item>ic_launcher_1</item>
+        <item>launcher1</item>
     </string-array>
 
     <string-array name="chinese_mode">
