--- a/app/src/main/res/layout/item_arrange_book.xml
+++ b/app/src/main/res/layout/item_arrange_book.xml
@@ -24,6 +24,7 @@
         android:padding="3dp"
         android:textSize="16sp"
         android:text="@string/book_name"
+        android:singleLine="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_author"
         app:layout_constraintLeft_toRightOf="@id/checkbox"
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:padding="3dp"
         android:text="@string/author"
+        android:singleLine="true"
         app:layout_constraintLeft_toRightOf="@+id/checkbox"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
         app:layout_constraintBottom_toBottomOf="parent"
