--- a/app/src/main/res/xml/donate.xml
+++ b/app/src/main/res/xml/donate.xml
@@ -1,4 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen>
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</PreferenceScreen>
+    <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
+        android:title="微信"
+        app:iconSpaceReserved="false">
+
+        <androidx.preference.Preference
+            android:key="gzGzh"
+            android:title="关注公众号"
+            android:summary="关注[开源阅读软件]点击广告支持我"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.Preference
+            android:key="wxZsm"
+            android:title="微信赞赏码"
+            android:summary="点击打开"
+            app:iconSpaceReserved="false" />
+
+    </io.legado.app.lib.theme.prefs.ATEPreferenceCategory>
+
+    <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
+        android:title="支付宝"
+        app:iconSpaceReserved="false">
+
+        <androidx.preference.Preference
+            android:key="zfbHbSsm"
+            android:title="支付宝红包搜索码"
+            android:summary="537954522 点击复制"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.Preference
+            android:key="zfbSk"
+            android:title="支付宝收款,支持红包"
+            android:summary="点击直接跳转支付宝"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.Preference
+            android:key="zfbHbRwm"
+            android:title="支付宝红包二维码"
+            android:summary="点击打开"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.Preference
+            android:key="zfbSkRwm"
+            android:title="支付宝收款二维码"
+            android:summary="点击打开"
+            app:iconSpaceReserved="false" />
+
+    </io.legado.app.lib.theme.prefs.ATEPreferenceCategory>
+
+    <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
+        android:title="QQ"
+        app:iconSpaceReserved="false">
+
+        <androidx.preference.Preference
+            android:key="qqSkRwm"
+            android:title="QQ收款二维码"
+            android:summary="点击打开"
+            app:iconSpaceReserved="false" />
+
+    </io.legado.app.lib.theme.prefs.ATEPreferenceCategory>
+
+</androidx.preference.PreferenceScreen>
