--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -214,6 +214,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
+            android:singleLine="true"
             android:text="@string/group"
             android:textColor="@color/tv_text_default"
             android:textSize="16sp" />
@@ -223,6 +224,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
+            android:singleLine="true"
             android:text="@string/toc_s"
             android:textColor="@color/tv_text_default"
             android:textSize="16sp" />
