--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -136,12 +136,14 @@
         <item>iconMain</item>
         <item>icon1</item>
         <item>icon2</item>
+        <item>icon3</item>
     </string-array>
 
     <string-array name="icons">
         <item>ic_launcher</item>
         <item>launcher1</item>
         <item>launcher2</item>
+        <item>launcher3</item>
     </string-array>
 
     <string-array name="chinese_mode">
