--- a/app/src/main/res/xml/pref_config_aloud.xml
+++ b/app/src/main/res/xml/pref_config_aloud.xml
@@ -2,24 +2,30 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <io.legado.app.lib.theme.prefs.ATESwitchPreference
-        android:defaultValue="false"
-        android:title="@string/read_aloud_by_page"
-        android:key="readAloudByPage"
-        app:iconSpaceReserved="false" />
+    <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
+        android:title="@string/aloud_config"
+        app:iconSpaceReserved="false">
 
-    <io.legado.app.lib.theme.prefs.ATESwitchPreference
-        android:defaultValue="false"
-        android:title="@string/read_aloud_on_line"
-        android:key="readAloudOnLine"
-        app:iconSpaceReserved="false" />
+        <io.legado.app.lib.theme.prefs.ATESwitchPreference
+            android:defaultValue="false"
+            android:title="@string/read_aloud_by_page"
+            android:key="readAloudByPage"
+            app:iconSpaceReserved="false" />
 
-    <androidx.preference.ListPreference
-        android:key="ttsSpeechPer"
-        android:title="@string/tone_colour"
-        android:defaultValue="0"
-        android:entries="@array/tts_speech_per"
-        android:entryValues="@array/tts_speech_per_value"
-        app:iconSpaceReserved="false" />
+        <io.legado.app.lib.theme.prefs.ATESwitchPreference
+            android:defaultValue="false"
+            android:title="@string/read_aloud_on_line"
+            android:key="readAloudOnLine"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.ListPreference
+            android:key="ttsSpeechPer"
+            android:title="@string/tone_colour"
+            android:defaultValue="0"
+            android:entries="@array/tts_speech_per"
+            android:entryValues="@array/tts_speech_per_value"
+            app:iconSpaceReserved="false" />
+
+    </io.legado.app.lib.theme.prefs.ATEPreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
